Refonte NavBar terminée, commencement de la responsive, multiples modifications de texte sur le footer (correction erreur, restructuration). /!\ histoire des raccourcis sub-menu et la width quand retour à la ligne à FIXER pour avoir 20/20 :p

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ sass/index.min.css.map
 sass/error404.css.map
 sass/error404.min.css
 sass/error404.min.css.map
+sass/responsive.min.css
+sass/responsive.min.css.map
+sass/responsive.css.map
